--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
              <nav class="navbar">
                <ul class="navbar-nav list-group">
                   <li class="nav-item text-center list-group-item">
-                      <a class="nav-link" href="#">Home</a>
+                      <a class="nav-link" href="#">Hodeme</a>
                   </li>
                   <li class="nav-item text-center list-group-item">
                       <a class="nav-link" href="#">Branding</a>
